--- a/arch/arm/configs/msm8916_sec_defconfig
+++ b/arch/arm/configs/msm8916_sec_defconfig
@@ -26,7 +26,7 @@ CONFIG_MEMCG_SWAP=y
 CONFIG_MEMCG_SWAP_ENABLED=y
 # CONFIG_MEMCG_KMEM is not set
 CONFIG_CGROUP_SCHED=y
-CONFIG_RT_GROUP_SCHED=y
+# CONFIG_RT_GROUP_SCHED is not set
 CONFIG_MM_OWNER=y
 CONFIG_SCHED_HMP=y
 CONFIG_NAMESPACES=y
