--- a/arch/arm/configs/msm8916_sec_recovery_defconfig
+++ b/arch/arm/configs/msm8916_sec_recovery_defconfig
@@ -1,10 +1,12 @@
-# Support LZ4 KERNEL Compress
-# CONFIG_KERNEL_LZ4 is not set
+# Support LZMA KERNEL Compress
+CONFIG_KERNEL_LZMA=y
+CONFIG_LOCALVERSION="-recovery-Gabboxl"
 CONFIG_DECOMPRESS_LZ4=y
 CONFIG_KERNEL_XZ=y
 CONFIG_DECOMPRESS_XZ=y
 CONFIG_RD_LZ4=y
-CONFIG_DEFAULT_CFQ=y
+#CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_MAPLE=y
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 # CONFIG_SAMSUNG_DEBUG_DISPLAY is not set
 # CONFIG_SYSVIPC is not set
@@ -21,13 +23,8 @@ CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-# CONFIG_MEMCG_KMEM is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
-CONFIG_MM_OWNER=y
 CONFIG_SCHED_HMP=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
@@ -50,6 +47,7 @@ CONFIG_CC_STACKPROTECTOR_REGULAR=y
 CONFIG_PROCESS_RECLAIM=y
 CONFIG_PARTITION_ADVANCED=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
@@ -214,40 +212,13 @@ CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=y
 CONFIG_L2TP_ETH=y
 CONFIG_BRIDGE=y
-CONFIG_NET_CORE=y
-CONFIG_NET_CLS_BASIC=y
-CONFIG_NET_CLS=y
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_NET_EMATCH=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_NET_KEY=y
-CONFIG_NET_SCHED=y
-CONFIG_NET_SCH_HTB=y
-CONFIG_NET_SCH_PRIO=y
-CONFIG_NET_CLS_FW=y
-CONFIG_NET_CLS_U32=y
+
 CONFIG_CLS_U32_MARK=y
-CONFIG_NET_CLS_FLOW=y
-CONFIG_NET_EMATCH=y
-CONFIG_NET_EMATCH_CMP=y
-CONFIG_NET_EMATCH_NBYTE=y
-CONFIG_NET_EMATCH_U32=y
-CONFIG_NET_EMATCH_META=y
-CONFIG_NET_EMATCH_TEXT=y
-CONFIG_NET_CLS_ACT=y
-CONFIG_RMNET_DATA=y
-CONFIG_RMNET_DATA_FC=y
-CONFIG_RMNET_DATA_DEBUG_PKT=y
-CONFIG_SOCKEV_NLMCAST=y
-CONFIG_BT=y
+# CONFIG_BT is not set
 # CONFIG_BT_RFCOMM is not set
 # CONFIG_BT_BNEP is not set
 # CONFIG_BT_HIDP is not set
-CONFIG_CFG80211=y
-CONFIG_CFG80211_DEFAULT_PS=y
-CONFIG_NL80211_TESTMODE=y
-CONFIG_CFG80211_INTERNAL_REGDB=y
-CONFIG_NFC_QNCI=y
+
 # CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
@@ -273,8 +244,9 @@ CONFIG_BLK_DEV_DM=y
 CONFIG_DM_CRYPT=y
 CONFIG_DM_REQ_CRYPT=y
 # CONFIG_DM_VERITY is not set
-CONFIG_NETDEVICES=y
+# CONFIG_NETDEVICES is not set
 CONFIG_DUMMY=y
+
 CONFIG_TUN=y
 CONFIG_KS8851=y
 CONFIG_MSM_RMNET_BAM=y
@@ -294,19 +266,11 @@ CONFIG_PPPOPNS=y
 CONFIG_USB_USBNET=y
 CONFIG_USB_NET_SMSC75XX=y
 CONFIG_USB_NET_SMSC95XX=y
-CONFIG_WCNSS_CORE=y
-CONFIG_WCNSS_CORE_PRONTO=y
-CONFIG_WCNSS_MEM_PRE_ALLOC=y
-CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
+
 CONFIG_WIRELESS=y
-CONFIG_WIRELESS_EXT_SYSFS=y
-CONFIG_WEXT_CORE=y
-CONFIG_WEXT_PROC=y
-CONFIG_WLAN=y
-CONFIG_WIRELESS_EXT=y
-CONFIG_WEXT_PRIV=y
+
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_EVBUG is not set
+CONFIG_INPUT_EVBUG=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_INPUT_JOYSTICK=y
 CONFIG_JOYSTICK_XPAD=y
@@ -356,13 +320,15 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_POWER_RESET=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_DLOAD_MODE=y
-CONFIG_QCOM_HARDREBOOT_IMPLEMENTATION=y
+CONFIG_QCOM_HARDREBOOT_IMPLEMENTATION=n
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
 CONFIG_SENSORS_QPNP_ADC_CURRENT=y
 CONFIG_SENSORS_QPNP_CURRENT_MONITOR=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_TSENS8974=y
-CONFIG_THERMAL_MONITOR=y
+CONFIG_THERMAL_MONITOR=n
+CONFIG_THERMAL_MONITOR_SIMPLE=y
+CONFIG_CPU_THERMAL=y
 CONFIG_THERMAL_QPNP=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_REGULATOR=y
@@ -397,8 +363,7 @@ CONFIG_MSM_ISPIF=y
 # CONFIG_OV5645 is not set
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_VIDC_V4L2=y
-CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=y
+
 CONFIG_MSM_KGSL=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_FB=y
@@ -426,7 +391,7 @@ CONFIG_HIDRAW=y
 CONFIG_HID_A4TECH=y
 CONFIG_HID_ACRUX=y
 # CONFIG_HID_ACRUX_FF is not set
-CONFIG_HID_APPLE=y
+
 CONFIG_HID_BELKIN=y
 CONFIG_HID_CHERRY=y
 CONFIG_HID_CHICONY=y
@@ -444,7 +409,7 @@ CONFIG_HID_GYRATION=y
 CONFIG_HID_TWINHAN=y
 CONFIG_HID_KENSINGTON=y
 CONFIG_HID_LCPOWER=y
-CONFIG_HID_MAGICMOUSE=y
+
 CONFIG_HID_MICROSOFT=y
 CONFIG_HID_MONTEREY=y
 CONFIG_HID_MULTITOUCH=y
@@ -545,13 +510,14 @@ CONFIG_UIO_MSM_SHAREDMEM=y
 CONFIG_STAGING=y
 CONFIG_ZSMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_GPIO=y
-# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_ONESHOT_SYNC=y
 CONFIG_ION=y
@@ -564,7 +530,6 @@ CONFIG_QPNP_RESIN=y
 CONFIG_QPNP_REVID=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_BUS_SCALING=y
-CONFIG_MSM_RMNET_USB=y
 # CONFIG_MSM_BUSPM_DEV is not set
 CONFIG_BUS_TOPOLOGY_ADHOC=y
 CONFIG_MSM_MDSS_PLL=y
@@ -668,6 +633,8 @@ CONFIG_CRYPTO_SHA512_ARM_NEON=y
 CONFIG_CRYPTO_AES_ARM_BS=y
 CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_MSM_PERFORMANCE=y
+CONFIG_MSM_PERFORMANCE_HOTPLUG_ON=y
+CONFIG_MSM_CORE_CTL=y
 CONFIG_MSM_CORE_CTL_HELPER=y
 CONFIG_FB_MSM_MDSS_SAMSUNG=y
 
@@ -695,8 +662,8 @@ CONFIG_USER_RESET_DEBUG=y
 
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BIC=y
-CONFIG_DEFAULT_BIC=y
-CONFIG_DEFAULT_TCP_CONG="bic"
+#CONFIG_DEFAULT_BIC is not set
+#CONFIG_DEFAULT_TCP_CONG is not set
 CONFIG_MISC_FILESYSTEMS=y
 
 #ODE and DIR Encryption
@@ -723,18 +690,12 @@ CONFIG_TOUCH_DISABLER=y
 # Qualcomm Atheros Prima WLAN module
 #
 # CONFIG_PRIMA_WLAN is not set
-CONFIG_PRONTO_WLAN=y
-CONFIG_PRIMA_WLAN_LFR=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_ENABLE_LINUX_REG=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_QCOM_TDLS=y
 
-# usb fastcharge
-FORCE_FAST_CHARGE=y
+
+# Modules
+CONFIG_MODULES=y
+CONFIG_MODULE_FORCE_LOAD=y
+CONFIG_MODULE_UNLOAD=y
 
 # HOTPLUG drivers
 CONFIG_INTELLI_PLUG=y
@@ -749,3 +710,47 @@ CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_LIONFISH=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=n
+CONFIG_CPU_FREQ_GOV_WHEATLEY=n
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_HYPER=n
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=n
+CONFIG_CPU_FREQ_GOV_INTELLIMM=n
+CONFIG_CPU_FREQ_GOV_WAVE=y
+CONFIG_CPU_FREQ_GOV_PRESERVATIVE=y
+CONFIG_CPU_FREQ_GOV_BLUACTIVE=n
+CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_ALUCARD=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_UMBRELLA_CORE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVEX=y
+
+# Misc
+CONFIG_BOEFFLA_WL_BLOCKER=y
+
+# Fast Charge
+CONFIG_FORCE_FAST_CHARGE=y
+
+# Misc
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_FRANDOM=y
+CONFIG_ZEN_INTERACTIVE=y
+CONFIG_KSM=y
+CONFIG_UKSM=y
+
+# INTELLI THERMAL
+CONFIG_INTELLI_THERMAL=y
+
+# Sound Control
+CONFIG_SOUND_CONTROL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+
+CONFIG_CC_OPTIMIZE_FOR_SIZE=y
